Allow setting seed for new games with GamesController#create
